# MorseCodeEmscripten

./: CMakeLists.txt  README.md
MorseCodeConverter/: CMakeLists.txt  MorseCodeConverter.cpp  MorseCodeConverter.h  MorseCodeConverterAPI.cpp  MorseCodeConverterAPI.h
TestConversion/: CMakeLists.txt  Test.cpp
